# odomi

./: README.md
GUI_F4SC/: gui.html~  gui112.html~  gui_new _gmaps.html~  gui_new.html~  index.html
GUI_F4SC/RGraph/libraries/: RGraph.odo.js~
GUI_F4SC/jQuery-Flight-Indicators-master/: prova.html~
GUI_F4SC/js/: RGraph.altimeter.js~  altimeter.js~  btn_function.js  map_init_gmaps.js  map_myfunction.js  publisher_gui_ros.js
drone/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
drone/src/: drone.cpp  drone.cpp~  drone_parrot.cpp
fly4smartcity_gui/: gui1.html~  gui345.html~  gui_new _gmaps.html  gui_new _gmaps_logo.html~  index.html  index.html~  index_logo.html  prova orologio.html~  prova.html~  prova2.html~  prova3.html~  prova4.html~
fly4smartcity_gui/jQuery-Flight-Indicators-master/: indicatori.js
fly4smartcity_gui/js/: RGraph.battery.js  RGraph.battery.js~  RGraph.compass.js~  attitude_ind.js~  battery.js  battery.js~  btn_function.js  btn_function.js~  client_gui_ros.js  indicatori.js~  map_init.js~  map_init_gmaps.js  map_init_gmaps.js~  map_myfunction.js~  publisher_gui_ros.js  publisher_ros_gui.js~  subscriber_ros_gui.js  subscriber_ros_gui.js~
gui_msg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gui_msg/msg/: Drone.msg  Drone.msg~  SensorPacket.msg  SensorPacket.msg~  msg_gui_ros.msg  msg_path_ros_gui.msg~  msg_ros_gui.msg~
gui_msg/src/: Drone.cpp  Drone.cpp~  Mission_Planner.cpp  Mission_Planner.cpp.bku  Mission_Planner.cpp~  publisher_path_ros_gui.cpp~  publisher_ros_gui.cpp~  publisher_ros_gui2.cpp~  subscriber_gui_ros.cpp  subscriber_gui_ros.cpp~
gui_msg/srv/: getCurrentPosition.srv  getCurrentPosition.srv~  multiTarget.srv  multiTarget.srv~
guiofthegui_GMAPS/: .project
guiofthegui_GMAPS/GUI_review/: PROVA_indicatori.html~  gui (copy).html~  gui12.html~  gui2.html~  gui_new _gmaps_logo.html  gui_new.html  instructions.txt  instructions.txt~  prova5.html~
mission_planner/: CMakeLists.txt  CMakeLists.txt~  Makefile  manifest.xml  package.xml
mission_planner/src/: mission_planner.cpp  mission_planner.cpp~
mission_planner_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
mission_planner_msgs/include/: mygeolib.h
mission_planner_msgs/msg/: Action.msg  Coordinate.msg  CoordinateArray.msg  Drone.msg  ListString.msg  ListString.msg~  Move.msg  SensorPacket.msg  Teleop.msg  Teleop.msg~  Waypoints.msg~
mission_planner_msgs/srv/: TakeoffActivation.srv  TakeoffActivation.srv~  getCurrentPosition.srv  telemetry.srv
odomi-launcher/: CMakeLists.txt  package.xml
odomi-launcher/launch/: odomi.launch  odomi.launch~  odomi_parrot.launch  odomi_parrot.launch~  old_locations.txt  old_locations.txt~  pubstartgoal.launch~  seed.launch  seed.launch~
odomiAdapter/: CMakeLists.txt  package.xml  package.xml~
odomiAdapter/src/: 2shits.txt  2shits.txt~  bugs.txt  echoof.txt  echoof.txt.save  lte_crowd.txt  lte_crowd.txt~  lte_crowd_old.txt  lte_map.pgm  odomiAdapter.cpp  odomimap_edifici.pgm  odomimap_edifici_totale.pgm
odomi_path_planner/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml  package.xml~  salaD1.pgm
odomi_path_planner/catkin_generated/: generate_cached_setup.py  setup_cached.sh
odomi_path_planner/catkin_generated/installspace/: _setup_util.py
odomi_path_planner/devel/: .catkin  .rosinstall  setup.sh
odomi_path_planner/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
odomi_path_planner/gtest/: Makefile
odomi_path_planner/include/odomi_path_planner/: mygeolib.h
odomi_path_planner/src/: Dstar.cpp  Dstar.cpp~  Dstar.h  Dstar.h~  mygeolib.cpp  mygeolib.h  mygeolib.h~  odomi_path_planner.cpp  odomi_path_planner.cpp~
open_data_driver/: CMakeLists.txt  alberate.xml  altezze.xml  idro.xml  package.xml
open_data_driver/.svn/: all-wcprops  entries
open_data_driver/.svn/text-base/: open_data.yaml.svn-base  package.xml.svn-base
open_data_driver/include/.svn/: all-wcprops  entries
open_data_driver/include/csv/.svn/: all-wcprops  entries
open_data_driver/include/csv/.svn/text-base/: csv_parser.hpp.svn-base
open_data_driver/include/json/.svn/: all-wcprops  entries
open_data_driver/include/opendata/: PotenzaSegnale.h  Traffico.h  Trasporti.h  Trasporti.h~
open_data_driver/include/opendata/.svn/: all-wcprops  entries
open_data_driver/include/opendata/.svn/text-base/: Geoportale.h.svn-base  Traffico.h.svn-base  Weather.h.svn-base
open_data_driver/include/read/: read.h
open_data_driver/include/read/.svn/: all-wcprops  entries
open_data_driver/include/xml/.svn/: all-wcprops  entries
open_data_driver/src/: Geoportale.cpp  PotenzaSegnale.cpp  Weather.cpp  client.cpp  prova.txt  read.cpp
open_data_driver/src/.svn/: all-wcprops  entries
open_data_driver/src/.svn/text-base/: Traffico.cpp.svn-base  Trasporti.cpp.svn-base  networkrank3.json.svn-base  open_data_driver.cpp.svn-base  open_data_sync.cpp.svn-base
open_data_driver/src/Csv/.svn/: all-wcprops  entries
open_data_driver/src/Csv/.svn/text-base/: csv_parser.cpp.svn-base
open_data_driver/src/Json/.svn/: all-wcprops  entries
open_data_driver/src/Json/.svn/text-base/: json_reader.cpp.svn-base
open_data_driver/src/xml/.svn/: all-wcprops  entries
open_data_driver/src/xml/.svn/text-base/: pugixml.cpp.svn-base
open_data_msg/: CMakeLists.txt  package.xml
open_data_msg/.svn/: all-wcprops  entries
open_data_msg/include/.svn/: all-wcprops  (+1 more)
open_data_msg/msg/: Data.msg  Open_data.msg
pubstartgoal/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pubstartgoal/src/: bugs.txt~  lte-signal.txt  lte-signal.txt~  lte_crowd.txt~  lte_map.pgm  map.yaml  mygeolib.h  mygeolib.h~  odomimap_edifici.pgm  odomimap_edifici_totale.pgm  pubStartGoal.cpp  pubStartGoal.cpp~
see0d/: CMakeLists.txt  CMakeLists.txt~  KlogSeed.txt  KlogSeed.txt~  KlogSeed1.txt  KlogSeed1.txt~  package.xml  package.xml~
see0d/msg/: buildings.msg  buildings.msg~
see0d/src/: lte_crowd.txt  lte_map.pgm  odomimap_edifici.pgm  odomimap_edifici_totale.pgm  see0d.cpp
(+45 files in other folders)
