<?xml version="1.0"?>
<package>
  <name>odomiadapter</name>
  <version>0.0.0</version>
  <description>The pubstartgoal package</description>

  <maintainer email="sgabello@todo.todo">sgabello</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>odomi_path_planner</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>std_msgs</run_depend>
  
  </package>
